--- a/final/css/theme/samhoud.css
+++ b/final/css/theme/samhoud.css
@@ -244,6 +244,12 @@ body {
   border: 4px solid #009EE0;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
+img[alt="profile"] {
+  background: none !important;
+  border: none !important;
+  box-shadow: none !important;
+}
+
 .reveal section img.plain {
   border: 0;
   box-shadow: none; }
